kubernetes/utilities/switchutilities/tinshop/tinshop-network.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tinshop-traefik
  namespace: utilities
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure
  routes:
    - match: Host(`tinshop.kubernetes.timo.be`)
      kind: Rule
      services:
        - name: tinshop
          port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: tinshop
  namespace: utilities
spec:
  selector:
    app: tinshop
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
